# git-scribe-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: analysis.py  git_ops.py  main.py
src/git_scribe/: analysis.py  llm.py  main.py
tests/: test_analysis.py  test_git_ops.py
